# CZII

./: .gitignore  hello.py  pyproject.toml
notebooks/: 3d-u-net-training-only.ipynb  create-3d-mask_deepfindET入れられない.ipynb  czii-3d-unet-w-callback-max-epochs.ipynb  czii-prepare-image-data-for-unet.ipynb  install_data.ipynb  zipping.ipynb
notebooks/yolo11/: czii-making-datasets-for-yolo (1).ipynb  czii-making-datasets-for-yolo_CV.ipynb  czii-making-datasets-for-yolo_CV_mod_resize.ipynb  czii-making-datasets-for-yolo_CV_mod_resize2.ipynb  czii-making-datasets-for-yolo_CV_z方向に応じてradius変える.ipynb  czii-making-datasets-for-yolo_padding.ipynb  czii-making-datasets-for-yolo_可視化用.ipynb  czii-yolo11-training-baseline (1).ipynb
notebooks/yolo11_try/: czii-yolo11-submission-KDTree.ipynb  czii-yolo11-submission-baseline-padding.ipynb  czii-yolo11-submission-baseline-padding_pred_train.ipynb  czii-yolo11-submission-baseline-padding_環境変えてやり直し.ipynb  czii-yolo11-submission-post修正_環境変えてやり直し.ipynb  czii-yolo11-submission_cv_baseline.ipynb  czii-yolo11-submission_cv_baseline_radius変える.ipynb  czii-yolo11-submission_cv_baseline_sync.ipynb  czii-yolo11-submission_cv_baseline_sync_transfer.ipynb  czii-yolo11-submission_cv_baseline_sync_transfer_optuna.ipynb  czii-yolo11-submission_cv_baseline_sync_transfer_optuna_kaggle.ipynb  czii-yolo11-submission_cv_resize2.ipynb  czii-yolo11-submission_cv_resize_epochs25.ipynb  czii-yolo11-training-baseline_cv.ipynb  czii-yolo11-training-baseline_cv_radius変える.ipynb  czii-yolo11-training-baseline_cv_sync.ipynb  czii-yolo11-training-baseline_cv_sync_mod.ipynb  czii-yolo11-training-baseline_cv_sync_transfer.ipynb  czii-yolo11-training-baseline_cv_sync_transfer_radius.ipynb  czii-yolo11-training-baseline_try.ipynb  czii-yolo11-training-baseline_try_TS_73_6.ipynb  czii-yolo11-training_cv mod_resize.ipynb  czii-yolo11-training_cv mod_resize2.ipynb  czii-yolo11のpredictionだけとってくる_baseline_sync_transfer.ipynb  ensemble.ipynb
notebooks/yolo11_try/hengck/: czii_helper.py  dataset.py  decoder.py  model.py  model2.py  model3.py
